fix contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -164,7 +164,7 @@ article {
 
 caption {
     background-color: var(--primary-color);
-    color: var(--text-color-on_backgroungd);
+    color: white;
     padding: 8px;
 }
 
@@ -216,7 +216,7 @@ h3 {
 }
 
 .book a {
-    color: var(--secondary-color);
+    color: var(--header-color);
     padding: 10px;
 }
 
